fix: navbar spacing

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
     }
 
     .fylo-container {
-        @apply w-full max-w-[1206px] m-auto px-6 py-4 lg:px-20
+        @apply w-full max-w-[1206px] m-auto px-3 py-4 lg:px-20
     }
 }
 
